[tool.poetry]
name = "repl_python3_Bad_Token-Generator-and-Checker-V0.1"
version = "0.1.0"
description = ""
authors = ["BadNum1"]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
